--- a/latihan_1_8.html
+++ b/latihan_1_8.html
@@ -4,6 +4,12 @@
         <title>Biodata</title>
         <link rel="icon" type="img/png" href="gambar/icon.png" sizes="16x16"/>
     </head>
+    <style>
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+        }
+    </style>
     <body>    
         <table align="center" border="1px" bgcolor="white" width="75%">
             <tr>
