--- a/latihan_1_8.html
+++ b/latihan_1_8.html
@@ -58,7 +58,7 @@
                 <td> 2A</td>
             </tr>
             <tr>
-                <td rowspan="5" align="center"> <img src="gambar/faruq.JPG" width="150" height="200"></td>
+                <td rowspan="5" align="center"> <img src="gambar/faruk.JPG" width="150" height="200"></td>
                 <td> NIM</td>
                 <td> 234311020</td>
             </tr>
